syntax = "proto3";

package dataplane;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteSnapshotRequest {
    string SnapshotId = 1;
}

message DeleteSnapshotTaskState {
    DeleteSnapshotRequest Request = 1;
}
